--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/dvdread/dvdreadsrc.c:
+	  Remove deleted include.
+
 2005-04-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/dvdread/Makefile.am:
