--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream):
+	  Also use language code for Matroska files.
+
 2005-04-18  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
