gst/ffmpegcolorspace/gstffmpegcolorspace.c: Attempt passthrough (massively increases performance).
Original commit message from CVS:
* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
(gst_ffmpegcsp_pad_link):
Attempt passthrough (massively increases performance).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
+	(gst_ffmpegcsp_pad_link):
+	  Attempt passthrough (massively increases performance).
+
+2005-04-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* gst/tags/gstvorbistag.c: (gst_vorbis_tag_add):
 	  ... and to OGM / Ogg ...
 
