--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* ext/libpng/gstpngenc.c:
+	  How can this be broken for soooo long?
+
 2005-04-19  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* sys/ximage/ximagesink.c: (gst_ximagesink_chain):
